--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -26,9 +26,9 @@
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 320px;
-  padding: 20px;
+  width: 300px;
   text-align: center;
+  height: 280px;
   font-family: 'Anton', sans-serif;
 }
 
