--- a/src/pages/BlogDetail/blogDetail.css
+++ b/src/pages/BlogDetail/blogDetail.css
@@ -10,41 +10,65 @@
 
 /* ======= MOBILE FIRST ======= */
 .blog {
+  display: flex;
+  flex-direction: column;
+
   background: #fff;
   color: var(--text-1);
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, 'Helvetica Neue', Arial, 'Noto Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 /* HERO */
-.blog-hero { margin: 0 0 12px; }
+.blog-hero {
+  margin: 0 0 12px;
+}
+
 .hero-img {
   width: 100%;
-  height: auto;
+  height: 750px;
   display: block;
   border-radius: var(--radius);
+  object-fit: cover;
 }
 
 /* HEADERS */
-.blog-header { margin: 0 0 10px; }
+.blog-header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 28px;
+  align-items: center;
+  font-family: 'Anton', sans-serif;
+  color: #ff0000;
+  margin: 0 0 10px;
+}
+
 .blog-title {
   font-family: 'Anton', sans-serif;
-  color: var(--brand-red);
-  font-size: clamp(22px, 5vw, 40px);
-  line-height: 1.1;
-  margin: 8px 0 6px;
+  color: #ff0000;
+  font-size: 40px;
+  padding: 10px 20px;
 }
+
 .blog-lead {
-  font-size: clamp(14px, 3.5vw, 18px);
-  color: var(--text-1);
+  padding: 10px 20px;
+  font-size: 28px;
+  color: #ff0000;
   font-weight: 600;
+  font-family: 'DM Sans', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 }
 
 /* CONTENT */
 .blog-content p {
-  font-size: clamp(14px, 3.4vw, 18px);
+  font-size: 28px;
+  margin: 0 auto;
+  padding: 10px 20px;
   line-height: 1.7;
-  color: var(--text-2);
-  margin: 12px 0;
+  color: #ff0000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'DM Sans', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 }
 
 /* DIVISOR */
@@ -61,14 +85,22 @@
 /* RELATED */
 .related {
   display: grid;
-  grid-template-columns: 1fr;   /* 1 coluna no mobile */
+  grid-template-columns: 1fr;
+  /* 1 coluna no mobile */
   gap: 12px;
   padding-bottom: 24px;
 }
 
+.anothers-posts {
+  width: 100%;
+  font-family: 'Anton', sans-serif;
+}
+
 .related-card {
   display: grid;
-  grid-template-columns: 110px 1fr; /* thumb + texto */
+  grid-template-columns: 110px 1fr;
+  width: 100%;
+  min-width: 300px;
   gap: 10px;
   text-decoration: none;
   border: 1px solid #eee;
@@ -81,7 +113,7 @@
 
 .related-card:hover {
   transform: translateY(-1px);
-  box-shadow: 0 6px 16px rgba(0,0,0,.06);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, .06);
 }
 
 .related-card img {
@@ -117,11 +149,13 @@
   .related {
     grid-template-columns: repeat(3, 1fr);
   }
+
   /* opcional: cards “empilhados” no desktop */
   .related-card {
     grid-template-columns: 1fr;
     align-items: start;
   }
+
   .related-card img {
     width: 100%;
     height: 140px;
